--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ makecode:
   target: microbit
   platform: microbit
   home_url: https://makecode.microbit.org/
-theme: cerulean
+theme: jekyll-theme-slate
 include:
   - assets
   - README.md
